# deepfakes

./: .gitignore  Dockerfile  README.md  autoencoder.py  face_detect.py  facedetect.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
scripts/: autoencoder.py  face_detect.py  facedetect.py
src/deepfakes/: cli.py  facedetect.py  faceutils.py  gan_swapper_interface.py  main.py  simswap_wrapper.py
tests/: test_face_detector.py  test_face_utils.py  test_gan_swapper_interface.py  test_simswap_wrapper.py
