[tool.poetry]
name = "deepfakes-plus"
version = "0.1.0"
description = "A project for deepfakes experimentation, including face swapping."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10" # Reverted to ^3.10 to be compatible with numpy
numpy = "^2.2.6" # Kept existing version
pillow = "^11.2.1" # Kept existing version
opencv-python = "^4.11.0.86" # Kept existing version
typer = {extras = ["all"], version = "^0.15.4"} # Kept existing version, added 'all' extras for typer as it's common
torch = "*"
torchvision = "*"
facenet-pytorch = "*"
timm = "==0.5.4"
mmcv-full = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
